--- a/3d voxel game/3d voxel game.vcxproj
+++ b/3d voxel game/3d voxel game.vcxproj
@@ -73,20 +73,25 @@
   <ItemGroup>
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="RayTracer.cpp" />
     <ClCompile Include="Voxel.cpp" />
-    <ClCompile Include="VoxelFreeColor.cpp" />
-    <ClCompile Include="VoxelSolid.cpp" />
+    <ClCompile Include="FreeColor.cpp" />
+    <ClCompile Include="Solid.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
     <ClInclude Include="BlockRegister.h" />
+    <ClInclude Include="Chunk.h" />
+    <ClInclude Include="IDrawer.h" />
     <ClInclude Include="Macros.h" />
     <ClInclude Include="GLUtilty.h" />
     <ClInclude Include="Octree.h" />
+    <ClInclude Include="RayTracer.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="Voxel.h" />
-    <ClInclude Include="VoxelFreeColor.h" />
-    <ClInclude Include="VoxelSolid.h" />
+    <ClInclude Include="FreeColor.h" />
+    <ClInclude Include="Solid.h" />
+    <ClInclude Include="WorldMatrix.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
