--- a/3d voxel game/3d voxel game.vcxproj.filters
+++ b/3d voxel game/3d voxel game.vcxproj.filters
@@ -34,8 +34,44 @@
     <Filter Include="Source Files\Graphics">
       <UniqueIdentifier>{8b950319-e6a6-417f-90fd-348bdd1042bc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\World">
+    <Filter Include="Header Files\Graphics\Raw">
+      <UniqueIdentifier>{a1867273-c3bd-47f7-8601-69d5468de657}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Graphics\Renderer">
+      <UniqueIdentifier>{10553134-5362-42cd-abf0-8337c75a54bc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Matrix">
+      <UniqueIdentifier>{4dd7dd56-d500-4417-9f27-7b32fb8a0d7c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Graphics\OpenGl">
+      <UniqueIdentifier>{68aa8cf6-3f49-419d-8aff-bdb24fc29147}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Graphics\Opengl">
+      <UniqueIdentifier>{0b1313f5-7fa3-4bdd-a753-1762524de340}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Graphics\Renderer">
+      <UniqueIdentifier>{60acad01-d892-4243-87fb-dae709e4ce13}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Graphics\Raw">
+      <UniqueIdentifier>{f22495df-212d-441c-8f98-caa24394ef23}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Game">
+      <UniqueIdentifier>{881f7d7c-b81f-4961-a72d-19652787b8d3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Game">
+      <UniqueIdentifier>{1adfe07b-0915-43b4-81a0-140fffed8f3e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Matrix">
+      <UniqueIdentifier>{52bc3bf3-9b66-4d7e-9d5a-c618315ce0fe}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Matrix\World">
       <UniqueIdentifier>{f85361d0-654b-47a4-8403-c3a7cff67e06}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Matrix\World">
+      <UniqueIdentifier>{9c2a3611-68c4-4392-9d12-97f5bccae68d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\State">
+      <UniqueIdentifier>{82f565a8-a4c9-43d6-8061-ae39df6b3269}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -45,34 +81,34 @@
     <ClCompile Include="Block.cpp">
       <Filter>Source Files\Voxel\Block</Filter>
     </ClCompile>
-    <ClCompile Include="Voxel.cpp">
-      <Filter>Source Files\Voxel</Filter>
-    </ClCompile>
     <ClCompile Include="FreeColor.cpp">
       <Filter>Source Files\Voxel</Filter>
     </ClCompile>
     <ClCompile Include="Solid.cpp">
       <Filter>Source Files\Voxel</Filter>
     </ClCompile>
-    <ClCompile Include="RayTracer.cpp">
-      <Filter>Source Files\Graphics</Filter>
+    <ClCompile Include="OpenglRenderer.cpp">
+      <Filter>Source Files\Graphics\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="StateTest.cpp">
+      <Filter>Source Files\State</Filter>
+    </ClCompile>
+    <ClCompile Include="GameTest.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="VoxelMatrix.cpp">
+      <Filter>Source Files\Matrix</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GLUtilty.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="BlockRegister.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Block.h">
       <Filter>Header Files\Voxel\Block</Filter>
     </ClInclude>
     <ClInclude Include="Macros.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Voxel.h">
-      <Filter>Header Files\Voxel</Filter>
     </ClInclude>
     <ClInclude Include="Octree.h">
       <Filter>Header Files</Filter>
@@ -86,17 +122,53 @@
     <ClInclude Include="Solid.h">
       <Filter>Header Files\Voxel</Filter>
     </ClInclude>
-    <ClInclude Include="IDrawer.h">
-      <Filter>Header Files\Graphics</Filter>
-    </ClInclude>
-    <ClInclude Include="RayTracer.h">
-      <Filter>Header Files\Graphics</Filter>
-    </ClInclude>
     <ClInclude Include="WorldMatrix.h">
-      <Filter>Header Files\World</Filter>
+      <Filter>Header Files\Matrix\World</Filter>
     </ClInclude>
     <ClInclude Include="Chunk.h">
-      <Filter>Header Files\World</Filter>
+      <Filter>Header Files\Matrix\World</Filter>
+    </ClInclude>
+    <ClInclude Include="RawVoxel.h">
+      <Filter>Header Files\Graphics\Raw</Filter>
+    </ClInclude>
+    <ClInclude Include="RawVoxelMatrix.h">
+      <Filter>Header Files\Graphics\Raw</Filter>
+    </ClInclude>
+    <ClInclude Include="Color.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IRenderer.h">
+      <Filter>Header Files\Graphics\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="IMatrix.h">
+      <Filter>Header Files\Matrix</Filter>
+    </ClInclude>
+    <ClInclude Include="VoxelMatrix.h">
+      <Filter>Header Files\Matrix</Filter>
+    </ClInclude>
+    <ClInclude Include="IVoxel.h">
+      <Filter>Header Files\Voxel</Filter>
+    </ClInclude>
+    <ClInclude Include="OpenglRenderer.h">
+      <Filter>Header Files\Graphics\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="GLUtilty.h">
+      <Filter>Header Files\Graphics\OpenGl</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>Header Files\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="GameTest.h">
+      <Filter>Header Files\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="StateTest.h">
+      <Filter>Header Files\State</Filter>
+    </ClInclude>
+    <ClInclude Include="VoxelRegister.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GL.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
