--- a/3d voxel game/3d voxel game.vcxproj
+++ b/3d voxel game/3d voxel game.vcxproj
@@ -39,8 +39,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\libs\glfw-3.0.3\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\libs\glfw-3.0.3\build\src\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\gl\glfw-3.0.4\include;C:\gl\glm;C:\gl\glew-1.10.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\gl\glfw-3.0.4\bin\Debug;C:\gl\glew-1.10.0\lib\Release\Win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>C:\glfw-3.0.4.bin.WIN32\include;C:\glfw-3.0.4\include;C:\glm;C:\glew-1.10.0\include;$(IncludePath)</IncludePath>
@@ -51,10 +51,11 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
+      <PreprocessorDefinitions>CLIENT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opengl32.lib;glu32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glfw3dll.lib;glu32.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
