--- a/3d voxel game/3d voxel game.vcxproj.filters
+++ b/3d voxel game/3d voxel game.vcxproj.filters
@@ -209,5 +209,8 @@
     <ClInclude Include="DrawableVertexBuffer.h">
       <Filter>Header Files\Graphics\Drawable\GL</Filter>
     </ClInclude>
+    <ClInclude Include="Vertex.h">
+      <Filter>Header Files\Graphics\Renderer</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
