--- a/3d voxel game/3d voxel game.vcxproj
+++ b/3d voxel game/3d voxel game.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Solid.cpp" />
     <ClCompile Include="StateTest.cpp" />
+    <ClCompile Include="Torus.cpp" />
     <ClCompile Include="VoxelMatrix.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
@@ -100,6 +101,7 @@
     <ClInclude Include="IWorld.h" />
     <ClInclude Include="RenderableTerminal.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="Torus.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="VoxelRegister.h" />
     <ClInclude Include="Chunk.h" />
