--- a/3d voxel game/3d voxel game.vcxproj.filters
+++ b/3d voxel game/3d voxel game.vcxproj.filters
@@ -79,19 +79,19 @@
     <Filter Include="Source Files\Graphics\Drawable\GL">
       <UniqueIdentifier>{285d14e2-9941-4189-9aa6-5eff8bd57450}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Renderable">
+    <Filter Include="Header Files\Graphics\Renderable">
       <UniqueIdentifier>{4dd7dd56-d500-4417-9f27-7b32fb8a0d7c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Renderable\World">
-      <UniqueIdentifier>{f85361d0-654b-47a4-8403-c3a7cff67e06}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Renderable">
+    <Filter Include="Source Files\Graphics\Renderable">
       <UniqueIdentifier>{52bc3bf3-9b66-4d7e-9d5a-c618315ce0fe}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Renderable\World">
+    <Filter Include="Source Files\World">
       <UniqueIdentifier>{9c2a3611-68c4-4392-9d12-97f5bccae68d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Renderable\Entity">
+    <Filter Include="Header Files\World">
+      <UniqueIdentifier>{f85361d0-654b-47a4-8403-c3a7cff67e06}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Entity">
       <UniqueIdentifier>{bb3b80d2-e992-4ad5-8a13-0ca58bd2e7cb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -121,7 +121,7 @@
       <Filter>Source Files\Game</Filter>
     </ClCompile>
     <ClCompile Include="VoxelMatrix.cpp">
-      <Filter>Source Files\Renderable</Filter>
+      <Filter>Source Files\Graphics\Renderable</Filter>
     </ClCompile>
     <ClCompile Include="EventHandler.cpp">
       <Filter>Source Files\Events</Filter>
@@ -133,10 +133,13 @@
       <Filter>Source Files\Graphics\Renderer</Filter>
     </ClCompile>
     <ClCompile Include="RenderableTerminal.cpp">
-      <Filter>Source Files\Renderable</Filter>
+      <Filter>Source Files\Graphics\Renderable</Filter>
     </ClCompile>
     <ClCompile Include="World.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\World</Filter>
+    </ClCompile>
+    <ClCompile Include="Torus.cpp">
+      <Filter>Source Files\Graphics\Renderable</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -159,10 +162,10 @@
       <Filter>Header Files\Voxel</Filter>
     </ClInclude>
     <ClInclude Include="WorldMatrix.h">
-      <Filter>Header Files\Renderable\World</Filter>
+      <Filter>Header Files\World</Filter>
     </ClInclude>
     <ClInclude Include="Chunk.h">
-      <Filter>Header Files\Renderable\World</Filter>
+      <Filter>Header Files\World</Filter>
     </ClInclude>
     <ClInclude Include="RawVoxel.h">
       <Filter>Header Files\Graphics\Raw</Filter>
@@ -177,7 +180,7 @@
       <Filter>Header Files\Graphics\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="VoxelMatrix.h">
-      <Filter>Header Files\Renderable</Filter>
+      <Filter>Header Files\Graphics\Renderable</Filter>
     </ClInclude>
     <ClInclude Include="IVoxel.h">
       <Filter>Header Files\Voxel</Filter>
@@ -219,22 +222,25 @@
       <Filter>Header Files\Graphics\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="IRenderable.h">
-      <Filter>Header Files\Renderable</Filter>
+      <Filter>Header Files\Graphics\Renderable</Filter>
     </ClInclude>
     <ClInclude Include="RenderableTerminal.h">
-      <Filter>Header Files\Renderable</Filter>
+      <Filter>Header Files\Graphics\Renderable</Filter>
     </ClInclude>
     <ClInclude Include="IEntity.h">
-      <Filter>Header Files\Renderable\Entity</Filter>
+      <Filter>Header Files\Entity</Filter>
     </ClInclude>
     <ClInclude Include="IWorld.h">
-      <Filter>Header Files\Renderable\World</Filter>
+      <Filter>Header Files\World</Filter>
     </ClInclude>
     <ClInclude Include="World.h">
-      <Filter>Header Files\Renderable\World</Filter>
+      <Filter>Header Files\World</Filter>
     </ClInclude>
     <ClInclude Include="deque2.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Torus.h">
+      <Filter>Header Files\Graphics\Renderable</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
