--- a/3d voxel game/3d voxel game.vcxproj
+++ b/3d voxel game/3d voxel game.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Solid.cpp" />
     <ClCompile Include="StateTest.cpp" />
+    <ClCompile Include="stb_image.c" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Torus.cpp" />
     <ClCompile Include="VoxelMatrix.cpp" />
@@ -103,6 +104,7 @@
     <ClInclude Include="RenderableTerminal.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderType.h" />
+    <ClInclude Include="stb_image.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Torus.h" />
     <ClInclude Include="Vertex.h" />
