--- a/3d voxel game/3d voxel game.vcxproj.filters
+++ b/3d voxel game/3d voxel game.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClCompile Include="Texture.cpp">
       <Filter>Source Files\Graphics\Texture</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image.c">
+      <Filter>Source Files\Graphics\Texture</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h">
@@ -259,6 +262,9 @@
     </ClInclude>
     <ClInclude Include="Vertex2.h">
       <Filter>Header Files\Graphics\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Header Files\Graphics\Texture</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
